kubernetes/k8s/belajar-html/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: belajar-html
spec:
  selector:
    app: belajar-html
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
