kubernetes/k8s/belajar-html/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: belajar-html-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: belajar-html.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: belajar-html
                port:
                  number: 80
